VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

VHANDLE CADAPI CadGetDimStyleByID     (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetDimStyleByName   (VDWG hDwg, LPCTSTR szName);

/********************************************************************
*  DIMENSION STYLE PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadDimStyleGetID          (VHANDLE hStyle);

void    CADAPI CadDimStyleGetName        (VHANDLE hStyle, TCHAR* szName);

void    CADAPI CadDimStylePutName        (VHANDLE hStyle, LPCTSTR szName);

int     CADAPI CadDimStyleGetColor       (VHANDLE hStyle, int Item);

void    CADAPI CadDimStylePutColor       (VHANDLE hStyle, int Item, int Color);

int     CADAPI CadDimStyleGetLweight     (VHANDLE hStyle, int Item);

void    CADAPI CadDimStylePutLweight     (VHANDLE hStyle, int Item, int Lweight);

double  CADAPI CadDimStyleGetExtBeyond   (VHANDLE hStyle);

void    CADAPI CadDimStylePutExtBeyond   (VHANDLE hStyle, double val);

double  CADAPI CadDimStyleGetExtOffset   (VHANDLE hStyle);

void    CADAPI CadDimStylePutExtOffset   (VHANDLE hStyle, double val);

int     CADAPI CadDimStyleGetArrow       (VHANDLE hStyle, int Place);

void    CADAPI CadDimStylePutArrow       (VHANDLE hStyle, int Place, int ArrType);

double  CADAPI CadDimStyleGetArrowSize   (VHANDLE hStyle);

void    CADAPI CadDimStylePutArrowSize   (VHANDLE hStyle, double Size);

double  CADAPI CadDimStyleGetCenMark     (VHANDLE hStyle);

void    CADAPI CadDimStylePutCenMark     (VHANDLE hStyle, double Size);

double  CADAPI CadDimStyleGetTextHeight  (VHANDLE hStyle);

void    CADAPI CadDimStylePutTextHeight  (VHANDLE hStyle, double Height);

double  CADAPI CadDimStyleGetTextGap     (VHANDLE hStyle);

void    CADAPI CadDimStylePutTextGap     (VHANDLE hStyle, double Gap);

IDOBJ   CADAPI CadDimStyleGetTextStyleID (VHANDLE hStyle);

void    CADAPI CadDimStylePutTextStyleID (VHANDLE hStyle, IDOBJ Id);

UINT    CADAPI CadDimStyleGetTextPlace   (VHANDLE hStyle);

void    CADAPI CadDimStylePutTextPlace   (VHANDLE hStyle, UINT Placement);

double  CADAPI CadDimStyleGetScale       (VHANDLE hStyle);

void    CADAPI CadDimStylePutScale       (VHANDLE hStyle, double Scal);

double  CADAPI CadDimStyleGetRound       (VHANDLE hStyle);

void    CADAPI CadDimStylePutRound       (VHANDLE hStyle, double RoundOff);

int     CADAPI CadDimStyleGetUnits       (VHANDLE hStyle, BOOL bAngular);

void    CADAPI CadDimStylePutUnits       (VHANDLE hStyle, BOOL bAngular, int UnitsType);

int     CADAPI CadDimStyleGetPrecision   (VHANDLE hStyle, BOOL bAngular);

void    CADAPI CadDimStylePutPrecision   (VHANDLE hStyle, BOOL bAngular, int Prec);

BOOL    CADAPI CadDimStyleGetZeroSup     (VHANDLE hStyle, BOOL bAngular);

void    CADAPI CadDimStylePutZeroSup     (VHANDLE hStyle, BOOL bAngular, BOOL bSuppress);

int     CADAPI CadDimStyleGetSeparator   (VHANDLE hStyle);

void    CADAPI CadDimStylePutSeparator   (VHANDLE hStyle, int DecSep);

void    CADAPI CadDimStyleGetPrefix      (VHANDLE hStyle, TCHAR* szPrefix);

void    CADAPI CadDimStylePutPrefix      (VHANDLE hStyle, LPCTSTR szPrefix);

void    CADAPI CadDimStyleGetSuffix      (VHANDLE hStyle, TCHAR* szSuffix);

void    CADAPI CadDimStylePutSuffix      (VHANDLE hStyle, LPCTSTR szSuffix);




/******************************************************************************
* LOCATE ENTITY
*******************************************************************************/
VHANDLE CADAPI CadGetEntityByCursor   (VDWG hDwg);

void    CADAPI CadGetEntitiesByPoint  (VDWG hDwg, int Xwin, int Ywin, int* phEnt, int* pnEnts, int iMax);

void    CADAPI CadGetEntitiesByRect   (VDWG hDwg, int Lwin, int Twin, int Rwin, int Bwin, int* phEnt, int* pnEnts, int nMax);

VHANDLE CADAPI CadGetEntityByPoint    (VDWG hDwg, int Xwin, int Ywin);

VHANDLE CADAPI CadGetEntityByPointIn  (VDWG hDwg, double Xdisp, double Ydisp);

VHANDLE CADAPI CadGetEntityByID       (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetEntityByUserData (VDWG hDwg, DWORD UserData);

VHANDLE CADAPI CadGetEntityByPtr      (VHANDLE hPtr);

VHANDLE CADAPI CadGetFirstEntity      (VDWG hDwg);

VHANDLE CADAPI CadGetNextEntity       (VDWG hDwg, VHANDLE hEnt);

VHANDLE CADAPI CadGetPickEntity       (VDWG hDwg);


/******************************************************************************
* ENTITY PROPERTIES
*******************************************************************************/
IDOBJ   CADAPI CadEntityGetID         (VHANDLE hEnt);

DWORD   CADAPI CadEntityGetType       (VHANDLE hEnt);

double  CADAPI CadEntityGetLeft       (VHANDLE hEnt);

double  CADAPI CadEntityGetBottom     (VHANDLE hEnt);

double  CADAPI CadEntityGetRight      (VHANDLE hEnt);

double  CADAPI CadEntityGetTop        (VHANDLE hEnt);

int     CADAPI CadEntityGetNumPaths   (VHANDLE hEnt);

int     CADAPI CadEntityGetPathSize   (VHANDLE hEnt, int iPath);

void    CADAPI CadEntityGetVer        (VHANDLE hEnt, int iVer, double* pX, double* pY);

BOOL    CADAPI CadEntityGetGrip       (VHANDLE hEnt, int iGrip, double* pX, double* pY, double* pZ);

IDOBJ   CADAPI CadEntityGetLayerID    (VHANDLE hEnt);

BOOL    CADAPI CadEntityPutLayerID    (VHANDLE hEnt, VDWG hDwg, IDOBJ LayerID);

IDOBJ   CADAPI CadEntityGetPageID     (VHANDLE hEnt);

void    CADAPI CadEntityPutPageID     (VHANDLE hEnt, IDOBJ PageID);

IDOBJ   CADAPI CadEntityGetLinetypeID (VHANDLE hEnt);

void    CADAPI CadEntityPutLinetypeID (VHANDLE hEnt, IDOBJ Id);

double  CADAPI CadEntityGetLtScale    (VHANDLE hEnt);

void    CADAPI CadEntityPutLtScale    (VHANDLE hEnt, double lts);

int     CADAPI CadEntityGetColor      (VHANDLE hEnt);

void    CADAPI CadEntityPutColor      (VHANDLE hEnt, int Color);

DWORD   CADAPI CadEntityGetLineweight (VHANDLE hEnt);

void    CADAPI CadEntityPutLineweight (VHANDLE hEnt, int lw);

DWORD   CADAPI CadEntityGetUserData   (VHANDLE hEnt);

void    CADAPI CadEntityPutUserData   (VHANDLE hEnt, DWORD val);

BOOL    CADAPI CadEntityGetFilled     (VHANDLE hEnt);

void    CADAPI CadEntityPutFilled     (VHANDLE hEnt, BOOL bFilled);

BOOL    CADAPI CadEntityGetBorder     (VHANDLE hEnt);

void    CADAPI CadEntityPutBorder     (VHANDLE hEnt, BOOL bBorder);

int     CADAPI CadEntityGetBordColor  (VHANDLE hEnt);

void    CADAPI CadEntityPutBordColor  (VHANDLE hEnt, int Color);

BOOL    CADAPI CadEntityGetBlink      (VHANDLE hEnt);

void    CADAPI CadEntityPutBlink      (VHANDLE hEnt, BOOL bBlink);

BOOL    CADAPI CadEntityGetVisible    (VHANDLE hEnt);

void    CADAPI CadEntityPutVisible    (VHANDLE hEnt, BOOL bVisible);

BOOL    CADAPI CadEntityGetDeleted    (VHANDLE hEnt);

BOOL    CADAPI CadEntityGetSelected   (VDWG hDwg, VHANDLE hEnt);

BOOL    CADAPI CadEntityGetLocked     (VHANDLE hEnt);

void    CADAPI CadEntityPutLocked     (VHANDLE hEnt, BOOL bLock);

// entity's extended data
void    CADAPI CadEntityPutExData     (VHANDLE hEnt, void* pData, int nBytes);

int     CADAPI CadEntityGetExDataSize (VHANDLE hEnt);

void    CADAPI CadEntityGetExData     (VHANDLE hEnt, void* pData);

VHANDLE CADAPI CadEntityGetExDataPtr  (VHANDLE hEnt);



/******************************************************************************
* ENTITY EDIT FUNCTIONS
*******************************************************************************/
void    CADAPI CadEntityErase         (VHANDLE hEnt, BOOL bErase);

VHANDLE CADAPI CadEntityCopy          (VHANDLE hEnt);

void    CADAPI CadEntityMove          (VHANDLE hEnt, double dx, double dy, double dz);

void    CADAPI CadEntityMoveGrip      (VHANDLE hEnt, int iGrip, double dx, double dy, double dz);

void    CADAPI CadEntityScale         (VHANDLE hEnt, double x0, double y0, double z0, double Scal);

void    CADAPI CadEntityRotate        (VHANDLE hEnt, double x0, double y0, double z0, double Angle);

void    CADAPI CadEntityMirror        (VHANDLE hEnt, double x0, double y0, double z0, double x1, double y1, double z1);

BOOL    CADAPI CadEntityExplode       (VHANDLE hEnt, long* pnOutEnts, long* pFirstID);

BOOL    CADAPI CadAddEdge             (VHANDLE hEnt);

BOOL    CADAPI CadEntityTrim          (VHANDLE hEnt, double x, double y);

BOOL    CADAPI CadEntityExtend        (VHANDLE hEnt, double x, double y);



/******************************************************************************
* POINT
*******************************************************************************/
VHANDLE CADAPI CadAddPoint           (VDWG hDwg, double X, double Y, double Z);

IDOBJ   CADAPI CadPointGetStyleID    (VHANDLE hEnt);