VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Function CadGetDimStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetDimStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadDimStyleGetID Lib "vecad.dll" (ByVal hStyle As Long) As Long
Public Declare Sub      CadDimStyleGetName Lib "vecad.dll" (ByVal hStyle As Long, ByVal szName As Any)
Public Declare Sub      CadDimStylePutName Lib "vecad.dll" (ByVal hStyle As Long, ByVal szName As String)
Public Declare Function CadDimStyleGetColor Lib "vecad.dll" (ByVal hStyle As Long, ByVal Item As Long) As Long
Public Declare Sub      CadDimStylePutColor Lib "vecad.dll" (ByVal hStyle As Long, ByVal Item As Long, ByVal Color As Long)
Public Declare Function CadDimStyleGetLweight Lib "vecad.dll" (ByVal hStyle As Long, ByVal Item As Long) As Long
Public Declare Sub      CadDimStylePutLweight Lib "vecad.dll" (ByVal hStyle As Long, ByVal Item As Long, ByVal Lweight As Long)
Public Declare Function CadDimStyleGetExtBeyond Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutExtBeyond Lib "vecad.dll" (ByVal hStyle As Long, ByVal val As Double)
Public Declare Function CadDimStyleGetExtOffset Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutExtOffset Lib "vecad.dll" (ByVal hStyle As Long, ByVal val As Double)
Public Declare Function CadDimStyleGetArrow Lib "vecad.dll" (ByVal hStyle As Long, ByVal Place As Long) As Long
Public Declare Sub      CadDimStylePutArrow Lib "vecad.dll" (ByVal hStyle As Long, ByVal Place As Long, ByVal ArrType As Long)
Public Declare Function CadDimStyleGetArrowSize Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutArrowSize Lib "vecad.dll" (ByVal hStyle As Long, ByVal Size As Double)
Public Declare Function CadDimStyleGetCenMark Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutCenMark Lib "vecad.dll" (ByVal hStyle As Long, ByVal Size As Double)
Public Declare Function CadDimStyleGetTextHeight Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutTextHeight Lib "vecad.dll" (ByVal hStyle As Long, ByVal Height As Double)
Public Declare Function CadDimStyleGetTextGap Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutTextGap Lib "vecad.dll" (ByVal hStyle As Long, ByVal Gap As Double)
Public Declare Function CadDimStyleGetTextStyleID Lib "vecad.dll" (ByVal hStyle As Long) As Long
Public Declare Sub      CadDimStylePutTextStyleID Lib "vecad.dll" (ByVal hStyle As Long, ByVal Id As Long)
Public Declare Function CadDimStyleGetTextPlace Lib "vecad.dll" (ByVal hStyle As Long) As Long
Public Declare Sub      CadDimStylePutTextPlace Lib "vecad.dll" (ByVal hStyle As Long, ByVal Placement As Long)
Public Declare Function CadDimStyleGetScale Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutScale Lib "vecad.dll" (ByVal hStyle As Long, ByVal Scal As Double)
Public Declare Function CadDimStyleGetRound Lib "vecad.dll" (ByVal hStyle As Long) As Double
Public Declare Sub      CadDimStylePutRound Lib "vecad.dll" (ByVal hStyle As Long, ByVal RoundOff As Double)
Public Declare Function CadDimStyleGetUnits Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long) As Long
Public Declare Sub      CadDimStylePutUnits Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long, ByVal UnitsType As Long)
Public Declare Function CadDimStyleGetPrecision Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long) As Long
Public Declare Sub      CadDimStylePutPrecision Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long, ByVal Prec As Long)
Public Declare Function CadDimStyleGetZeroSup Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long) As Long
Public Declare Sub      CadDimStylePutZeroSup Lib "vecad.dll" (ByVal hStyle As Long, ByVal bAngular As Long, ByVal bSuppress As Long)
Public Declare Function CadDimStyleGetSeparator Lib "vecad.dll" (ByVal hStyle As Long) As Long
Public Declare Sub      CadDimStylePutSeparator Lib "vecad.dll" (ByVal hStyle As Long, ByVal DecSep As Long)
Public Declare Sub      CadDimStyleGetPrefix Lib "vecad.dll" (ByVal hStyle As Long, ByVal szPrefix As Any)
Public Declare Sub      CadDimStylePutPrefix Lib "vecad.dll" (ByVal hStyle As Long, ByVal szPrefix As String)
Public Declare Sub      CadDimStyleGetSuffix Lib "vecad.dll" (ByVal hStyle As Long, ByVal szSuffix As Any)
Public Declare Sub      CadDimStylePutSuffix Lib "vecad.dll" (ByVal hStyle As Long, ByVal szSuffix As String)
Public Declare Function CadGetEntityByCursor Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGetEntitiesByPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xwin As Long, ByVal Ywin As Long, ByVal phEnt As Long, ByVal pnEnts As Long, ByVal iMax As Long)
Public Declare Sub      CadGetEntitiesByRect Lib "vecad.dll" (ByVal hDwg As Long, ByVal Lwin As Long, ByVal Twin As Long, ByVal Rwin As Long, ByVal Bwin As Long, ByVal phEnt As Long, ByVal pnEnts As Long, ByVal nMax As Long)
Public Declare Function CadGetEntityByPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xwin As Long, ByVal Ywin As Long) As Long
Public Declare Function CadGetEntityByPointIn Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xdisp As Double, ByVal Ydisp As Double) As Long
Public Declare Function CadGetEntityByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetEntityByUserData Lib "vecad.dll" (ByVal hDwg As Long, ByVal UserData As Long) As Long
Public Declare Function CadGetEntityByPtr Lib "vecad.dll" (ByVal hPtr As Long) As Long
Public Declare Function CadGetFirstEntity Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextEntity Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long) As Long
Public Declare Function CadGetPickEntity Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadEntityGetID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityGetType Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityGetLeft Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadEntityGetBottom Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadEntityGetRight Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadEntityGetTop Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Function CadEntityGetNumPaths Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityGetPathSize Lib "vecad.dll" (ByVal hEnt As Long, ByVal iPath As Long) As Long
Public Declare Sub      CadEntityGetVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal pX As Long, ByVal pY As Long)
Public Declare Function CadEntityGetGrip Lib "vecad.dll" (ByVal hEnt As Long, ByVal iGrip As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long) As Long
Public Declare Function CadEntityGetLayerID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityPutLayerID Lib "vecad.dll" (ByVal hEnt As Long, ByVal hDwg As Long, ByVal LayerID As Long) As Long
Public Declare Function CadEntityGetPageID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutPageID Lib "vecad.dll" (ByVal hEnt As Long, ByVal PageID As Long)
Public Declare Function CadEntityGetLinetypeID Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutLinetypeID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Function CadEntityGetLtScale Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadEntityPutLtScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal lts As Double)
Public Declare Function CadEntityGetColor Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutColor Lib "vecad.dll" (ByVal hEnt As Long, ByVal Color As Long)
Public Declare Function CadEntityGetLineweight Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutLineweight Lib "vecad.dll" (ByVal hEnt As Long, ByVal lw As Long)
Public Declare Function CadEntityGetUserData Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutUserData Lib "vecad.dll" (ByVal hEnt As Long, ByVal val As Long)
Public Declare Function CadEntityGetFilled Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutFilled Lib "vecad.dll" (ByVal hEnt As Long, ByVal bFilled As Long)
Public Declare Function CadEntityGetBorder Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutBorder Lib "vecad.dll" (ByVal hEnt As Long, ByVal bBorder As Long)
Public Declare Function CadEntityGetBordColor Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutBordColor Lib "vecad.dll" (ByVal hEnt As Long, ByVal Color As Long)
Public Declare Function CadEntityGetBlink Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutBlink Lib "vecad.dll" (ByVal hEnt As Long, ByVal bBlink As Long)
Public Declare Function CadEntityGetVisible Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutVisible Lib "vecad.dll" (ByVal hEnt As Long, ByVal bVisible As Long)
Public Declare Function CadEntityGetDeleted Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityGetSelected Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long) As Long
Public Declare Function CadEntityGetLocked Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityPutLocked Lib "vecad.dll" (ByVal hEnt As Long, ByVal bLock As Long)
Public Declare Sub      CadEntityPutExData Lib "vecad.dll" (ByVal hEnt As Long, ByVal pData As Any, ByVal nBytes As Long)
Public Declare Function CadEntityGetExDataSize Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityGetExData Lib "vecad.dll" (ByVal hEnt As Long, ByVal pData As Any)
Public Declare Function CadEntityGetExDataPtr Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityErase Lib "vecad.dll" (ByVal hEnt As Long, ByVal bErase As Long)
Public Declare Function CadEntityCopy Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadEntityMove Lib "vecad.dll" (ByVal hEnt As Long, ByVal dx As Double, ByVal dy As Double, ByVal dz As Double)
Public Declare Sub      CadEntityMoveGrip Lib "vecad.dll" (ByVal hEnt As Long, ByVal iGrip As Long, ByVal dx As Double, ByVal dy As Double, ByVal dz As Double)
Public Declare Sub      CadEntityScale Lib "vecad.dll" (ByVal hEnt As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal Scal As Double)
Public Declare Sub      CadEntityRotate Lib "vecad.dll" (ByVal hEnt As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal Angle As Double)
Public Declare Sub      CadEntityMirror Lib "vecad.dll" (ByVal hEnt As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double)
Public Declare Function CadEntityExplode Lib "vecad.dll" (ByVal hEnt As Long, ByVal pnOutEnts As Long, ByVal pFirstID As Long) As Long
Public Declare Function CadAddEdge Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadEntityTrim Lib "vecad.dll" (ByVal hEnt As Long, ByVal x As Double, ByVal y As Double) As Long
Public Declare Function CadEntityExtend Lib "vecad.dll" (ByVal hEnt As Long, ByVal x As Double, ByVal y As Double) As Long
Public Declare Function CadAddPoint Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadPointGetStyleID Lib "vecad.dll" (ByVal hEnt As Long) As Long
